public/css/style.css
body {
  background-color: #f0f0f0;
  margin: 0px;
  overflow: hidden;
}

input {
  margin: 1px;
}

.message {
  font-size: 14px;
  display: inline-block;
  padding: 8px;
  border-radius: 25px;
  margin: 1px;
  color: #FFFFFF;
  font-family: monospace;
  max-width: 300px;
  overflow-wrap: break-word;
}

.input {
  border-color: #424242;
  background-color: #A3A3A3;
}
.input:hover {
  background-color: #C3C3C3;
}

.output {
  border-color: #424242;
  background-color: #767676;
}

#bottomLeftUI {
  position: fixed;
  top: 99%;
  left: 1%;
  transform:translateY(-100%);
}

#bottomLeftUI > div {
  display: inline-block;
}

#messageContainer {
  width: 300px;
}

#buttonContainer {
  position: absolute;
  right: 1%;
  width:230px;
}

#buttonDiv > button {
  width: 100%;
}

#hoverGuideCoordinates {
  background-color: #f0f0f0;
  padding: 4px;
  border-radius: 25px;
}

input[type=number] {
  width:50px;
}

table {
  display: inline-block;
  background-color: #C6C6C6;
  border: 2px solid;
  border-color: #DBDBDB #5B5B5B #5B5B5B #DBDBDB;
  padding: 0px 6px 6px 6px;
  margin: 5px;
}

td[data-selected=true] {
  border-color: lime;
}
td:hover {
  background-color: #C3C3C3;
}

td {
  color: white;
  display: inline-block;
  background-color: #8B8B8B;
  border: 2px solid;
  border-color: #373737 #FFF #FFF #373737;
  width: 40px;
  height: 40px;
  text-align: left;
  user-select: none;
}

.inventoryDeleteButton {
  float: right;
}

